<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info_actual"
            android:icon="@drawable/libro"
            android:title="@string/menu_info_actual" />
        <item
            android:id="@+id/nav_instrucciones"
            android:icon="@drawable/user_manual"
            android:title="@string/menu_instrucciones" />
        <item
            android:id="@+id/nav_internacional"
            android:icon="@drawable/world"
            android:title="@string/menu_info_internacional" />
        <item
            android:id="@+id/nav_sobre_nosotros"
            android:icon="@drawable/identi"
            android:title="@string/menu_sobre_nosotros" />
    </group>
</menu>
